@@ -1,3 +1,7 @@
+2011-12-29  lianweidong  <weidong.lian@gmail.com>
+
+	* add journal abbreviation lists that I collected and adopted from internet.
+
 2011-10-22  lianweidong  <weidong.lian@gmail.com>
 
  	* add lian-examples where I just put some examples and template I collected from internet. Thanks a lot for the contribution of Damiano Varagnolo.
